--- a/client/src/components/views/Home/Cards/Cards.module.css
+++ b/client/src/components/views/Home/Cards/Cards.module.css
@@ -63,7 +63,7 @@
 .loader {
   width: 35px;
   height: 35px;
-  border: 5px solid #FFF;
+  border: 5px solid #000000;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
