--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body {
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;   
-   background-color: #67A7D3
+   background-color: #ffffff
 }
 
 code {
