--- a/client/src/components/views/Detail/PokeDetail/PokemonDetail.module.css
+++ b/client/src/components/views/Detail/PokeDetail/PokemonDetail.module.css
@@ -2,7 +2,7 @@
   width: 400px;
   height: 600px;
   justify-content: center;
-  background-color: #FF3D00;
+  background-color: #FF9800;
   margin-top: 1rem;
   margin: 100px auto ;
   opacity: 0.3;
@@ -45,6 +45,11 @@ border-radius: 2rem;
 }
 
 
+.spanPoke {
+    color :#67A7D3;
+    text-shadow: 1px 1px 1px black;
+}
+
 
 .backHome{
     border: none;
@@ -83,7 +88,7 @@ border-radius: 2rem;
     .loader {
       width: 35px;
       height: 35px;
-      border: 5px solid #FFF;
+      border: 5px solid #000000;
       border-bottom-color: transparent;
       border-radius: 50%;
       display: inline-block;
